--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@types/uuid": "^9.0.7",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
